--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -833,14 +833,18 @@
     "from sklearn.model_selection import ShuffleSplit\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.model_selection import StratifiedShuffleSplit\n",
+    "\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.2, random_state=0)\n",
+    "\n",
     "cv = StratifiedShuffleSplit(n_splits=3, test_size=0.2, random_state=0)\n",
+    "\n",
     "clf = make_pipeline(preprocessing.StandardScaler(), MLPClassifier(solver='lbfgs', activation='logistic', alpha=3e-6, hidden_layer_sizes=(10, 200), random_state=1))\n",
     "cross_val_score(clf, X, Y, cv=5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 259,
    "metadata": {
     "collapsed": false
    },
@@ -848,15 +852,21 @@
     {
      "data": {
       "text/plain": [
-       "0.8058361391694725"
+       "0.81564245810055869"
       ]
      },
-     "execution_count": 243,
+     "execution_count": 259,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.2, random_state=0)\n",
+    "\n",
+    "clf = GradientBoostingClassifier(n_estimators=200, learning_rate=1, max_depth=1, random_state=0).fit(X_train, Y_train)\n",
+    "clf.score(X_test, Y_test) "
+   ]
   },
   {
    "cell_type": "code",
@@ -997,7 +1007,12 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#paramaters select and ensemb\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.ensemble import VotingClassifier\n",
+    "from sklearn.ensemble import BaggingClassifier"
+   ]
   },
   {
    "cell_type": "code",
