--- a/captcha.ipynb
+++ b/captcha.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -47,17 +47,11 @@
     "#     if i % 100 == 0:\n",
     "#         print(\"generating captcha \" , i)\n",
     "\n",
-    "num_char = 4\n",
-    "num_images_train = 10000\n",
-    "num_images_test = 1000\n",
     "width_images = 100\n",
     "height_images = 40\n",
     "num_charmap = 36\n",
     "num_channel = 1\n",
-    "char_map = string.ascii_uppercase + string.digits\n",
-    "\n",
-    "\n",
-    "\n",
+    "num_char = 4\n",
     "image_generator = ImageCaptcha(fonts=['./font/AntykwaBold.ttf'])\n",
     "\n",
     "def dataset_generator(num_images):\n",
@@ -81,6 +75,7 @@
     "def get_next_batch(X, y, batch_size=100):\n",
     "    index_in_epoch = 0\n",
     "    num_images = X.shape[0]\n",
+    "#     assert num_images <= X.shape[0]\n",
     "    while True:\n",
     "        start = index_in_epoch\n",
     "        index_in_epoch += batch_size\n",
@@ -102,28 +97,29 @@
     "# y_test = np.reshape(y_test, [-1, num_char, num_charmap])   \n",
     " \n",
     "\n",
-    "dataset_dir = \"./captcha_data/\"\n",
-    "dataset_name = \"captcha.pickle\"\n",
-    "dataset_path = os.path.join(dataset_dir, dataset_name)\n",
-    "if os.path.exists(dataset_path):\n",
-    "    with open(dataset_path, 'rb') as f:\n",
-    "        X_train = pickle.load(f)\n",
-    "        y_train = pickle.load(f)\n",
-    "        y_test = pickle.load(f)\n",
-    "        X_test = pickle.load(f)\n",
-    "else:\n",
-    "    if not os.path.isdir(dataset_dir):\n",
-    "        os.mkdir(dataset_dir)\n",
-    "    print(\"generate train dataset: \\n\", '-'*40)\n",
-    "    X_train, y_train = dataset_generator(num_images_train)\n",
-    "    print(\"generate test dataset: \\n\", '-'*40)\n",
-    "    X_test, y_test = dataset_generator(num_images_test)\n",
-    "    y_test = np.reshape(y_test, [-1, num_char, num_charmap])\n",
-    "    with open(dataset_path, 'wb') as f:\n",
-    "        pickle.dump(X_train, f)\n",
-    "        pickle.dump(y_train, f)\n",
-    "        pickle.dump(y_test, f)\n",
-    "        pickle.dump(X_test, f)\n",
+    "# dataset_dir = \"./captcha_data/\"\n",
+    "# dataset_name = \"captcha.pickle\"\n",
+    "# dataset_path = os.path.join(dataset_dir, dataset_name)\n",
+    "# if os.path.exists(dataset_path):\n",
+    "#     with open(dataset_path, 'rb') as f:\n",
+    "#         X_train = pickle.load(f)\n",
+    "#         y_train = pickle.load(f)\n",
+    "#         y_test = pickle.load(f)\n",
+    "#         X_test = pickle.load(f)\n",
+    "# else:\n",
+    "#     if not os.path.isdir(dataset_dir):\n",
+    "#         os.mkdir(dataset_dir)\n",
+    "#     print(\"generate train dataset: \\n\", '-'*40)\n",
+    "#     X_train, y_train = dataset_generator(num_images_train)\n",
+    "#     print(\"generate test dataset: \\n\", '-'*40)\n",
+    "#     X_test, y_test = dataset_generator(num_images_test)\n",
+    "#     y_test = np.reshape(y_test, [-1, num_char, num_charmap])\n",
+    "#     if num_images_train <= 60000:\n",
+    "#         with open(dataset_path, 'wb') as f:\n",
+    "#             pickle.dump(X_train, f)\n",
+    "#             pickle.dump(y_train, f)\n",
+    "#             pickle.dump(y_test, f)\n",
+    "#             pickle.dump(X_test, f)\n",
     "\n"
    ]
   },
@@ -297,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -307,114 +303,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sun Jan  8 18:12:54 2017 : step 99, training accuracy 0\n",
-      "Sun Jan  8 18:13:11 2017 : step 199, training accuracy 0\n",
-      "Sun Jan  8 18:13:27 2017 : step 299, training accuracy 0\n",
-      "Sun Jan  8 18:13:41 2017 : step 399, training accuracy 0\n",
-      "Sun Jan  8 18:13:56 2017 : step 499, training accuracy 0\n",
-      "Sun Jan  8 18:14:12 2017 : step 599, training accuracy 0\n",
-      "Sun Jan  8 18:14:28 2017 : step 699, training accuracy 0\n",
-      "Sun Jan  8 18:14:44 2017 : step 799, training accuracy 0\n",
-      "Sun Jan  8 18:15:00 2017 : step 899, training accuracy 0\n",
-      "Sun Jan  8 18:15:15 2017 : step 999, training accuracy 0\n",
-      "Sun Jan  8 18:15:31 2017 : step 1099, training accuracy 0\n",
-      "Sun Jan  8 18:15:47 2017 : step 1199, training accuracy 0\n",
-      "Sun Jan  8 18:16:02 2017 : step 1299, training accuracy 0\n",
-      "Sun Jan  8 18:16:18 2017 : step 1399, training accuracy 0\n",
-      "Sun Jan  8 18:16:34 2017 : step 1499, training accuracy 0\n",
-      "Sun Jan  8 18:16:50 2017 : step 1599, training accuracy 0\n",
-      "Sun Jan  8 18:17:05 2017 : step 1699, training accuracy 0\n",
-      "Sun Jan  8 18:17:22 2017 : step 1799, training accuracy 0\n",
-      "Sun Jan  8 18:17:37 2017 : step 1899, training accuracy 0\n",
-      "Sun Jan  8 18:17:53 2017 : step 1999, training accuracy 0\n",
-      "Sun Jan  8 18:18:09 2017 : step 2099, training accuracy 0\n",
-      "Sun Jan  8 18:18:25 2017 : step 2199, training accuracy 0\n",
-      "Sun Jan  8 18:18:42 2017 : step 2299, training accuracy 0\n",
-      "Sun Jan  8 18:18:58 2017 : step 2399, training accuracy 0\n",
-      "Sun Jan  8 18:19:15 2017 : step 2499, training accuracy 0\n",
-      "Sun Jan  8 18:19:31 2017 : step 2599, training accuracy 0\n",
-      "Sun Jan  8 18:19:47 2017 : step 2699, training accuracy 0\n",
-      "Sun Jan  8 18:20:03 2017 : step 2799, training accuracy 0\n",
-      "Sun Jan  8 18:20:19 2017 : step 2899, training accuracy 0\n",
-      "Sun Jan  8 18:20:35 2017 : step 2999, training accuracy 0\n",
-      "Sun Jan  8 18:20:51 2017 : step 3099, training accuracy 0\n",
-      "Sun Jan  8 18:21:07 2017 : step 3199, training accuracy 0\n",
-      "Sun Jan  8 18:21:23 2017 : step 3299, training accuracy 0\n",
-      "Sun Jan  8 18:21:38 2017 : step 3399, training accuracy 0\n",
-      "Sun Jan  8 18:21:54 2017 : step 3499, training accuracy 0.00390625\n",
-      "Sun Jan  8 18:22:10 2017 : step 3599, training accuracy 0\n",
-      "Sun Jan  8 18:22:26 2017 : step 3699, training accuracy 0\n",
-      "Sun Jan  8 18:22:43 2017 : step 3799, training accuracy 0\n",
-      "Sun Jan  8 18:22:59 2017 : step 3899, training accuracy 0\n",
-      "Sun Jan  8 18:23:15 2017 : step 3999, training accuracy 0.015625\n",
-      "Sun Jan  8 18:23:31 2017 : step 4099, training accuracy 0.0078125\n",
-      "Sun Jan  8 18:23:47 2017 : step 4199, training accuracy 0.0078125\n",
-      "Sun Jan  8 18:24:04 2017 : step 4299, training accuracy 0.00390625\n",
-      "Sun Jan  8 18:24:20 2017 : step 4399, training accuracy 0.00390625\n",
-      "Sun Jan  8 18:24:36 2017 : step 4499, training accuracy 0.015625\n",
-      "Sun Jan  8 18:24:52 2017 : step 4599, training accuracy 0.0117188\n",
-      "Sun Jan  8 18:25:08 2017 : step 4699, training accuracy 0.015625\n",
-      "Sun Jan  8 18:25:24 2017 : step 4799, training accuracy 0.0234375\n",
-      "Sun Jan  8 18:25:40 2017 : step 4899, training accuracy 0.03125\n",
-      "Sun Jan  8 18:25:57 2017 : step 4999, training accuracy 0.0546875\n",
-      "Sun Jan  8 18:26:13 2017 : step 5099, training accuracy 0.046875\n",
-      "Sun Jan  8 18:26:29 2017 : step 5199, training accuracy 0.0625\n",
-      "Sun Jan  8 18:26:45 2017 : step 5299, training accuracy 0.101562\n",
-      "Sun Jan  8 18:27:02 2017 : step 5399, training accuracy 0.105469\n",
-      "Sun Jan  8 18:27:18 2017 : step 5499, training accuracy 0.109375\n",
-      "Sun Jan  8 18:27:34 2017 : step 5599, training accuracy 0.15625\n",
-      "Sun Jan  8 18:27:50 2017 : step 5699, training accuracy 0.15625\n",
-      "Sun Jan  8 18:28:06 2017 : step 5799, training accuracy 0.199219\n",
-      "Sun Jan  8 18:28:23 2017 : step 5899, training accuracy 0.199219\n",
-      "Sun Jan  8 18:28:38 2017 : step 5999, training accuracy 0.28125\n",
-      "Sun Jan  8 18:28:55 2017 : step 6099, training accuracy 0.234375\n",
-      "Sun Jan  8 18:29:11 2017 : step 6199, training accuracy 0.28125\n",
-      "Sun Jan  8 18:29:27 2017 : step 6299, training accuracy 0.316406\n",
-      "Sun Jan  8 18:29:43 2017 : step 6399, training accuracy 0.367188\n",
-      "Sun Jan  8 18:29:59 2017 : step 6499, training accuracy 0.355469\n",
-      "Sun Jan  8 18:30:15 2017 : step 6599, training accuracy 0.359375\n",
-      "Sun Jan  8 18:30:31 2017 : step 6699, training accuracy 0.433594\n",
-      "Sun Jan  8 18:30:47 2017 : step 6799, training accuracy 0.472656\n",
-      "Sun Jan  8 18:31:03 2017 : step 6899, training accuracy 0.464844\n",
-      "Sun Jan  8 18:31:19 2017 : step 6999, training accuracy 0.496094\n",
-      "Sun Jan  8 18:31:35 2017 : step 7099, training accuracy 0.527344\n",
-      "Sun Jan  8 18:31:51 2017 : step 7199, training accuracy 0.503906\n",
-      "Sun Jan  8 18:32:07 2017 : step 7299, training accuracy 0.546875\n",
-      "Sun Jan  8 18:32:23 2017 : step 7399, training accuracy 0.515625\n",
-      "Sun Jan  8 18:32:39 2017 : step 7499, training accuracy 0.605469\n",
-      "Sun Jan  8 18:32:55 2017 : step 7599, training accuracy 0.679688\n",
-      "Sun Jan  8 18:33:11 2017 : step 7699, training accuracy 0.675781\n",
-      "Sun Jan  8 18:33:27 2017 : step 7799, training accuracy 0.652344\n",
-      "Sun Jan  8 18:33:43 2017 : step 7899, training accuracy 0.675781\n",
-      "Sun Jan  8 18:34:00 2017 : step 7999, training accuracy 0.679688\n",
-      "Sun Jan  8 18:34:15 2017 : step 8099, training accuracy 0.730469\n",
-      "Sun Jan  8 18:34:31 2017 : step 8199, training accuracy 0.765625\n",
-      "Sun Jan  8 18:34:46 2017 : step 8299, training accuracy 0.777344\n",
-      "Sun Jan  8 18:35:02 2017 : step 8399, training accuracy 0.769531\n",
-      "Sun Jan  8 18:35:17 2017 : step 8499, training accuracy 0.820312\n",
-      "Sun Jan  8 18:35:33 2017 : step 8599, training accuracy 0.816406\n",
-      "Sun Jan  8 18:35:50 2017 : step 8699, training accuracy 0.871094\n",
-      "Sun Jan  8 18:36:05 2017 : step 8799, training accuracy 0.84375\n",
-      "Sun Jan  8 18:36:22 2017 : step 8899, training accuracy 0.878906\n",
-      "Sun Jan  8 18:36:38 2017 : step 8999, training accuracy 0.878906\n",
-      "Sun Jan  8 18:36:54 2017 : step 9099, training accuracy 0.921875\n",
-      "Sun Jan  8 18:37:10 2017 : step 9199, training accuracy 0.828125\n",
-      "Sun Jan  8 18:37:26 2017 : step 9299, training accuracy 0.894531\n",
-      "Sun Jan  8 18:37:42 2017 : step 9399, training accuracy 0.917969\n",
-      "Sun Jan  8 18:37:58 2017 : step 9499, training accuracy 0.902344\n",
-      "Sun Jan  8 18:38:14 2017 : step 9599, training accuracy 0.917969\n",
-      "Sun Jan  8 18:38:30 2017 : step 9699, training accuracy 0.90625\n",
-      "Sun Jan  8 18:38:46 2017 : step 9799, training accuracy 0.921875\n",
-      "Sun Jan  8 18:39:02 2017 : step 9899, training accuracy 0.972656\n",
-      "Sun Jan  8 18:39:18 2017 : step 9999, training accuracy 0.941406\n",
-      "Sun Jan  8 18:39:34 2017 : step 10099, training accuracy 0.96875\n",
-      "Sun Jan  8 18:39:50 2017 : step 10199, training accuracy 0.953125\n",
-      "Sun Jan  8 18:40:06 2017 : step 10299, training accuracy 0.957031\n",
-      "Sun Jan  8 18:40:22 2017 : step 10399, training accuracy 0.96875\n",
-      "Sun Jan  8 18:40:38 2017 : step 10499, training accuracy 0.960938\n",
-      "Sun Jan  8 18:40:55 2017 : step 10599, training accuracy 0.972656\n",
-      "Sun Jan  8 18:41:11 2017 : step 10699, training accuracy 0.988281\n",
-      "Sun Jan  8 18:41:11 2017 : test accuracy 0.032\n"
+      "generate train dataset: \n",
+      " ----------------------------------------\n",
+      "generating captcha  7999\n",
+      "generating captcha  15999\n",
+      "generating captcha  23999\n",
+      "generating captcha  31999\n",
+      "generating captcha  39999\n",
+      "generate test dataset: \n",
+      " ----------------------------------------\n",
+      "generating captcha  199\n",
+      "generating captcha  399\n",
+      "generating captcha  599\n",
+      "generating captcha  799\n",
+      "generating captcha  999\n",
+      "Sun Jan  8 22:48:03 2017 : step 499, training accuracy 0.640625\n",
+      "Sun Jan  8 22:48:48 2017 : step 999, training accuracy 0.757812\n",
+      "Sun Jan  8 22:49:31 2017 : step 1499, training accuracy 0.671875\n",
+      "Sun Jan  8 22:50:15 2017 : step 1999, training accuracy 0.820312\n",
+      "Sun Jan  8 22:50:59 2017 : step 2499, training accuracy 0.8125\n",
+      "Sun Jan  8 22:51:43 2017 : step 2999, training accuracy 0.765625\n",
+      "Sun Jan  8 22:52:27 2017 : step 3499, training accuracy 0.835938\n",
+      "Sun Jan  8 22:53:11 2017 : step 3999, training accuracy 0.914062\n",
+      "Sun Jan  8 22:53:11 2017 epoch 0,test accuracy 0.611\n",
+      "****************************************\n"
      ]
     }
    ],
@@ -426,43 +338,98 @@
     "sess = tf.InteractiveSession(config=config)\n",
     "# with tf.Session(config=config) as sess:\n",
     "sess.run(tf.global_variables_initializer())\n",
-    "# saver.restore(sess, \"./model/model.ckpt\")\n",
+    "\n",
     "#batch_size 小会导致多次迭代仍无法收敛\n",
     "#h_fc1_drop：one batch 64:100; 128:200; 256:800\n",
     "#h_fc1_drop：all batches 64:++; 128:8000; 256:6900\n",
     "#h_fc1_drop, h_conv2_drop: one batch 64:700; 128:800; 256:1200\n",
     "#h_fc1_drop, h_conv2_drop: all batches 64:++; 128:++; 256:++\n",
     "\n",
-    "train_batch = get_next_batch(X_train, y_train, batch_size= 256)\n",
-    "step = 0\n",
-    "# X_batch, y_batch = next(train_batch)\n",
-    "# y_batch = y_batch.reshape(-1, num_char, num_charmap)\n",
+    "\n",
+    "char_map = string.ascii_uppercase + string.digits\n",
+    "#每当训练准确率达到90%，更换训练集，直到测试准确率达到80%\n",
+    "#1W-0.028; 3W-0.269\n",
+    "\n",
+    "num_images_train = 40000\n",
+    "num_images_test = 1000\n",
+    "test_accuracy = 0.0\n",
+    "epoch = 0\n",
     "while True:\n",
-    "    X_batch, y_batch = next(train_batch)\n",
-    "    y_batch = y_batch.reshape(-1, num_char, num_charmap)\n",
-    "    if (step+1)%100 == 0:\n",
-    "        train_accuracy = accuracy.eval(feed_dict={x:X_batch, y_: y_batch, keep_prob: 1.0})\n",
-    "        print(time.ctime() ,\": step %d, training accuracy %g\"%(step, train_accuracy))\n",
-    "        if train_accuracy > 0.98:\n",
-    "            print(time.ctime() ,\": test accuracy %g\"%accuracy.eval(feed_dict={\n",
-    "                x: X_test, y_: y_test, keep_prob: 1.0}))\n",
-    "            saver.save(sess, \"./model/model.ckpt\")\n",
-    "            break\n",
-    "    step += 1\n",
-    "    sess.run(train_step, feed_dict={x: X_batch, y_: y_batch, keep_prob: 0.5})\n",
+    "    saver.restore(sess, \"./model/model.ckpt\")\n",
+    "    print(\"generate train dataset: \\n\", '-'*40)\n",
+    "    X_train, y_train = dataset_generator(num_images_train)\n",
+    "    print(\"generate test dataset: \\n\", '-'*40)\n",
+    "    X_test, y_test = dataset_generator(num_images_test)\n",
+    "    y_test = y_test.reshape(-1, num_char, num_charmap)\n",
+    "    train_batch = get_next_batch(X_train, y_train, batch_size= 128)\n",
+    "    step = 0\n",
+    "    # X_batch, y_batch = next(train_batch)\n",
+    "    # y_batch = y_batch.reshape(-1, num_char, num_charmap)\n",
+    "    while True:\n",
+    "        X_batch, y_batch = next(train_batch)\n",
+    "        y_batch = y_batch.reshape(-1, num_char, num_charmap)\n",
+    "        if (step+1)%500 == 0:\n",
+    "            train_accuracy = accuracy.eval(feed_dict={x:X_batch, y_: y_batch, keep_prob: 1.0})\n",
+    "            print(time.ctime() ,\": step %d, training accuracy %g\"%(step, train_accuracy))\n",
+    "            if train_accuracy > 0.90:\n",
+    "                test_accuracy = accuracy.eval(feed_dict={x: X_test, y_: y_test, keep_prob: 1.0})\n",
+    "                print(time.ctime() ,\"epoch %d,test accuracy %g\"%(epoch, test_accuracy))\n",
+    "                print(\"* \"*40)\n",
+    "                saver.save(sess, \"./model/model.ckpt\")\n",
+    "                break\n",
+    "        step += 1\n",
+    "        sess.run(train_step, feed_dict={x: X_batch, y_: y_batch, keep_prob: 0.5})\n",
+    "    if test_accuracy > 0.80:\n",
+    "        print(time.ctime() ,\"training done!test accuracy is %g\"%test_accuracy)\n",
+    "        break\n",
+    "    epoch += 1\n",
+    "    \n",
     "#  无法收敛的元凶:batch_size\n",
     "#     train_step.run(feed_dict={x: X_batch, y_: y_batch, keep_prob: 0.5})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "EOFError",
+     "evalue": "Ran out of input",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mEOFError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-ac39f8a06f88>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexists\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdataset_path\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdataset_path\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'rb'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m         \u001b[0mX_train\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m         \u001b[0my_train\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0my_test\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mEOFError\u001b[0m: Ran out of input"
+     ]
+    }
+   ],
    "source": [
-    "\n"
+    "dataset_dir = \"./captcha_data/\"\n",
+    "dataset_name = \"captcha.pickle\"\n",
+    "dataset_path = os.path.join(dataset_dir, dataset_name)\n",
+    "if os.path.exists(dataset_path):\n",
+    "    with open(dataset_path, 'rb') as f:\n",
+    "        X_train = pickle.load(f)\n",
+    "        y_train = pickle.load(f)\n",
+    "        y_test = pickle.load(f)\n",
+    "        X_test = pickle.load(f)\n",
+    "else:\n",
+    "    if not os.path.isdir(dataset_dir):\n",
+    "        os.mkdir(dataset_dir)\n",
+    "    print(\"generate train dataset: \\n\", '-'*40)\n",
+    "    X_train, y_train = dataset_generator(num_images_train)\n",
+    "    print(\"generate test dataset: \\n\", '-'*40)\n",
+    "    X_test, y_test = dataset_generator(num_images_test)\n",
+    "    y_test = np.reshape(y_test, [-1, num_char, num_charmap])\n",
+    "    with open(dataset_path, 'wb') as f:\n",
+    "        pickle.dump(X_train, f)\n",
+    "        pickle.dump(y_train, f)\n",
+    "        pickle.dump(y_test, f)\n",
+    "        pickle.dump(X_test, f)\n"
    ]
   },
   {
