--- a/rotate_crop_and_resize_train_imgs.ipynb
+++ b/rotate_crop_and_resize_train_imgs.ipynb
@@ -294,7 +294,7 @@
    "execution_count": 72,
    "metadata": {
     "collapsed": false,
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -432,7 +432,7 @@
     "        _x, _y, _width, _height = rect['x'], rect['y'], rect['width'], rect['height']\n",
     "        coords = (_x*width, _y*height), _width*width, _height*height\n",
     "        currentAxis.add_patch(plt.Rectangle(*coords, fill=False, edgecolor=colors[ind], linewidth=2))\n",
-    "        j += j\n"
+    "        j += 1\n"
    ]
   },
   {
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -468,12 +468,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "import json\n",
     "for ind in range(len(label_files)): \n",
     "    label_file = label_files[ind]\n",
     "    with open(label_file, 'r') as f:\n",
@@ -481,6 +482,7 @@
     "    for i in range(len(label_json)):\n",
     "        rect_lst = label_json[i][\"annotations\"]\n",
     "        filename = label_json[i][\"filename\"]\n",
+    "        label_json[i][\"filename\"] = filename.split(\"/\")[-1]\n",
     "        file_path = data_dirs[ind] + filename.split(\"/\")[-1]\n",
     "        img = Image.open(file_path)\n",
     "        width, height = img.width, img.height\n",
