--- a/rotate_crop_and_resize_train_imgs.ipynb
+++ b/rotate_crop_and_resize_train_imgs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -486,39 +486,71 @@
     "        file_path = data_dirs[ind] + filename.split(\"/\")[-1]\n",
     "        img = Image.open(file_path)\n",
     "        width, height = img.width, img.height\n",
+    "        rect_lst_new = []\n",
     "        for rect in rect_lst:\n",
     "            _x, _y, _width, _height = rect['x'], rect['y'], rect['width'], rect['height']\n",
-    "            rect['x'], rect['y'], rect['width'], rect['height'] = _x/width, _y/height, _width/width, _height/height\n",
+    "            rect_new = dict()\n",
+    "            rect_new['x_min'], rect_new['y_min'], rect_new['x_max'], rect_new['y_max'] = _x/width, _y/height, (_x+_width)/width, (_y+_height)/height\n",
+    "            rect_lst_new.append(rect_new)\n",
+    "        label_json[i][\"annotations\"] = rect_lst_new\n",
     "    with open(label_file, 'w') as f:\n",
     "            json.dump(label_json, f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "for ind in range(1): \n",
+    "    label_file = label_files[ind]\n",
+    "    with open(label_file, 'r') as f:\n",
+    "        label_json = json.load(f)\n",
+    "    for i in range(len(label_json)):\n",
+    "        rect_lst = label_json[i][\"annotations\"]\n",
+    "        filename = label_json[i][\"filename\"]\n",
+    "        label_json[i][\"filename\"] = filename.split(\"/\")[-1]\n",
+    "        file_path = data_dirs[ind] + filename.split(\"/\")[-1]\n",
+    "        img = Image.open(file_path)\n",
+    "        width, height = img.width, img.height\n",
+    "        rect_lst_new = []\n",
+    "        for rect in rect_lst:\n",
+    "            _x, _y, _width, _height = rect['x'], rect['y'], rect['width'], rect['height']\n",
+    "            rect_new = dict()\n",
+    "            rect_new['x_min'], rect_new['y_min'], rect_new['x_max'], rect_new['y_max'] = _x/width, _y/height, (_x+_width)/width, (_y+_height)/height\n",
+    "            rect_lst_new.append(rect_new)\n",
+    "        label_json[i][\"annotations\"] = rect_lst_new"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'os' is not defined",
+     "ename": "TypeError",
+     "evalue": "the JSON object must be str, not 'dict'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-2cd706d1829a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mos\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'os' is not defined"
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-21-c72cc431ac08>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mjson\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloads\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlabel_json\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32mD:\\Program Files\\Anaconda\\lib\\json\\__init__.py\u001b[0m in \u001b[0;36mloads\u001b[0;34m(s, encoding, cls, object_hook, parse_float, parse_int, parse_constant, object_pairs_hook, **kw)\u001b[0m\n\u001b[1;32m    310\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ms\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    311\u001b[0m         raise TypeError('the JSON object must be str, not {!r}'.format(\n\u001b[0;32m--> 312\u001b[0;31m                             s.__class__.__name__))\n\u001b[0m\u001b[1;32m    313\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0ms\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstartswith\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mu'\\ufeff'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    314\u001b[0m         raise JSONDecodeError(\"Unexpected UTF-8 BOM (decode using utf-8-sig)\",\n",
+      "\u001b[0;31mTypeError\u001b[0m: the JSON object must be str, not 'dict'"
      ]
     }
    ],
-   "source": [
-    "os"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -526,16 +558,41 @@
     {
      "data": {
       "text/plain": [
-       "(812.1600000000014, 248.16000000000042)"
+       "{'annotations': [{'x_max': 0.0005291748046875,\n",
+       "   'x_min': 0.0003125,\n",
+       "   'y_max': 0.0004841820987654321,\n",
+       "   'y_min': 0.0003125},\n",
+       "  {'x_max': 0.00011962890625000001,\n",
+       "   'x_min': 2.3193359375e-05,\n",
+       "   'y_max': 0.0003761574074074074,\n",
+       "   'y_min': 0.00024305555555555555},\n",
+       "  {'x_max': 0.00010131835937499998,\n",
+       "   'x_min': 1.15966796875e-05,\n",
+       "   'y_max': 0.0006481481481481481,\n",
+       "   'y_min': 0.0002527006172839506},\n",
+       "  {'x_max': 9.33837890625e-05,\n",
+       "   'x_min': 4.638671875e-05,\n",
+       "   'y_max': 0.0007426697530864198,\n",
+       "   'y_min': 0.0002932098765432099},\n",
+       "  {'x_max': 0.0001885986328125,\n",
+       "   'x_min': 8.300781249999999e-05,\n",
+       "   'y_max': 0.0010262345679012347,\n",
+       "   'y_min': 0.0005767746913580247},\n",
+       "  {'x_max': 0.00045593261718750004,\n",
+       "   'x_min': 0.00023010253906250003,\n",
+       "   'y_max': 0.001084104938271605,\n",
+       "   'y_min': 0.0005999228395061728}],\n",
+       " 'class': 'image',\n",
+       " 'filename': 'img_07825.jpg'}"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "_x, _y"
+    "label_json[0]"
    ]
   },
   {
