--- a/fish_ssd.ipynb
+++ b/fish_ssd.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -44,25 +44,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "positional argument follows keyword argument (<ipython-input-2-87314c315c3c>, line 29)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-87314c315c3c>\"\u001b[0;36m, line \u001b[0;32m29\u001b[0m\n\u001b[0;31m    image = inception_preprocessing.preprocess_image(image_raw, height, width, is_training=is_training, bbox)\u001b[0m\n\u001b[0m                                                                                                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m positional argument follows keyword argument\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "slim = tf.contrib.slim\n",
-    "\n",
     "\n",
     "def load_batch(dataset, batch_size=32, height=299, width=299, is_training=False):\n",
     "    \"\"\"Loads a single batch of data.\n",
@@ -83,11 +71,10 @@
     "    data_provider = slim.dataset_data_provider.DatasetDataProvider(\n",
     "    dataset, common_queue_capacity=batch_size*3,\n",
     "    common_queue_min=8)\n",
-    "    image_raw, label, bb_label = data_provider.get(['image', 'label', 'bb_label'])\n",
-    "    bb_label = json.loads(bb_label)\n",
+    "    image_raw, label, bboxes = data_provider.get(['image', 'label', 'bbox'])\n",
     "    \n",
     "    # Preprocess image for usage by Inception.\n",
-    "    image = inception_preprocessing.preprocess_image(image_raw, height, width, is_training=is_training, bbox)\n",
+    "    image = inception_preprocessing.preprocess_image(image_raw, height, width, is_training=is_training, bbox=bboxes)\n",
     "    \n",
     "    # Preprocess the image for display purposes.\n",
     "    image_raw = tf.expand_dims(image_raw, 0)\n",
@@ -95,19 +82,19 @@
     "    image_raw = tf.squeeze(image_raw)\n",
     "\n",
     "    # Batch it up.\n",
-    "    images, images_raw, labels = tf.train.batch(\n",
-    "          [image, image_raw, label],\n",
+    "    images, images_raw, labels, bboxes = tf.train.batch(\n",
+    "          [image, image_raw, label, [bboxes]],\n",
     "          batch_size=batch_size,\n",
     "          num_threads=1,\n",
     "          capacity=2 * batch_size)\n",
     "    \n",
-    "    return images, images_raw, labels\n",
+    "    return images, images_raw, labels, bboxes\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -152,7 +139,6 @@
     "_ITEMS_TO_DESCRIPTIONS = {\n",
     "    'image': 'A color image of varying size.',\n",
     "    'label': 'A single integer between 0 and 7',\n",
-    "    'bb_label': 'A list of boundary boxes'\n",
     "}\n",
     "\n",
     "\n",
@@ -187,15 +173,18 @@
     "    keys_to_features = {\n",
     "        'image/encoded': tf.FixedLenFeature((), tf.string, default_value=''),\n",
     "        'image/format': tf.FixedLenFeature((), tf.string, default_value='png'),\n",
-    "        'image/class/label': tf.FixedLenFeature(\n",
-    "            [], tf.int64, default_value=tf.zeros([], dtype=tf.int64)),\n",
-    "        'image/bb_label': tf.FixedLenFeature((), tf.string, default_value=b''),\n",
+    "        'image/class/label': tf.FixedLenFeature([], tf.int64, default_value=tf.zeros([], dtype=tf.int64)),\n",
+    "        'image/bbox/ymin': tf.VarLenFeature(tf.float32),\n",
+    "        'image/bbox/xmin': tf.VarLenFeature(tf.float32),\n",
+    "        'image/bbox/ymax': tf.VarLenFeature(tf.float32),\n",
+    "        'image/bbox/xmax': tf.VarLenFeature(tf.float32),\n",
     "    }\n",
     "\n",
     "    items_to_handlers = {\n",
     "        'image': slim.tfexample_decoder.Image(),\n",
     "        'label': slim.tfexample_decoder.Tensor('image/class/label'),\n",
-    "        'bb_label': slim.tfexample_decoder.Tensor('image/bb_label'),\n",
+    "        'bbox': slim.tfexample_decoder.BoundingBox(\n",
+    "            ['ymin', 'xmin', 'ymax', 'xmax'], 'image/bbox/'),\n",
     "    }\n",
     "\n",
     "    decoder = slim.tfexample_decoder.TFExampleDecoder(\n",
@@ -212,7 +201,8 @@
     "        num_samples=SPLITS_TO_SIZES[split_name],\n",
     "        items_to_descriptions=_ITEMS_TO_DESCRIPTIONS,\n",
     "        num_classes=_NUM_CLASSES,\n",
-    "        labels_to_names=labels_to_names)\n"
+    "        labels_to_names=labels_to_names)\n",
+    "\n"
    ]
   },
   {
@@ -411,99 +401,48 @@
     "scrolled": true
    },
    "outputs": [],
-   "source": [
-    "def _get_bb():\n",
-    "    label_files = ['./label/bet_labels.json',\n",
-    "                 './label/alb_labels.json',\n",
-    "                 './label/yft_labels.json',\n",
-    "                 './label/dol_labels.json',\n",
-    "                 './label/shark_labels.json',\n",
-    "                 './label/lag_labels.json',\n",
-    "                 './label/other_labels.json']\n",
-    "    labels = []\n",
-    "    for i in range(len(label_files)):\n",
-    "        label_file = label_files[i]\n",
-    "        with open(label_file, 'r') as f:\n",
-    "            label_json = json.load(f)\n",
-    "        # extend 合并dict\n",
-    "        labels.extend(label_json)\n",
-    "    return labels"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "slim = tf.contrib.slim\n",
-    "\n",
-    "\n",
-    "def load_batch(dataset, batch_size=32, height=299, width=299, is_training=False):\n",
-    "    \"\"\"Loads a single batch of data.\n",
-    "    \n",
-    "    Args:\n",
-    "      dataset: The dataset to load.\n",
-    "      batch_size: The number of images in the batch.\n",
-    "      height: The size of each image after preprocessing.\n",
-    "      width: The size of each image after preprocessing.\n",
-    "      is_training: Whether or not we're currently training or evaluating.\n",
-    "    \n",
-    "    Returns:\n",
-    "      images: A Tensor of size [batch_size, height, width, 3], image samples that have been preprocessed.\n",
-    "      images_raw: A Tensor of size [batch_size, height, width, 3], image samples that can be used for visualization.\n",
-    "      labels: A Tensor of size [batch_size], whose values range between 0 and dataset.num_classes.\n",
-    "    \"\"\"\n",
-    "\n",
-    "    data_provider = slim.dataset_data_provider.DatasetDataProvider(\n",
-    "    dataset, common_queue_capacity=batch_size*3,\n",
-    "    common_queue_min=8)\n",
-    "    image_raw, label, bb_labels = data_provider.get(['image', 'label', 'bb_label'])\n",
-    "\n",
-    "    bboxes_json = json.loads(bb_labels.decode())\n",
-    "    bboxes = [[bbox_json['y_min'], bbox_json['x_min'], bbox_json['y_max'], bbox_json['x_max']] for bbox_json in bboxes_json]\n",
-    "    bbox_lst.append(bboxes)\n",
-    "    \n",
-    "    bbox_tensor = tf.cast(bbox_lst, dtype=tf.float64)\n",
-    "    \n",
-    "    # Preprocess image for usage by Inception.\n",
-    "    image, bbox = inception_preprocessing.preprocess_image(image_raw, height, width, is_training=is_training, bbox=bbox_tensor)\n",
-    "    \n",
-    "    # Preprocess the image for display purposes.\n",
-    "    image_raw = tf.expand_dims(image_raw, 0)\n",
-    "    image_raw = tf.image.resize_images(image_raw, [height, width])\n",
-    "    image_raw = tf.squeeze(image_raw)\n",
-    "\n",
-    "    # Batch it up.\n",
-    "    images, images_raw, labels, bboxes = tf.train.batch(\n",
-    "          [image, image_raw, label, bbox],\n",
-    "          batch_size=batch_size,\n",
-    "          num_threads=1,\n",
-    "          capacity=2 * batch_size)\n",
-    "    \n",
-    "    return images, images_raw, labels, bboxes"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "All shapes must be fully defined: [TensorShape([Dimension(720), Dimension(720), Dimension(3)]), TensorShape([Dimension(720), Dimension(720), Dimension(3)]), TensorShape([]), TensorShape([Dimension(1), Dimension(None), Dimension(4)])]",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m----------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                     Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-26-43c7e1476975>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mfish_data_dir\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'tmp/fish/dataset'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mdataset\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_split\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'train'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfish_data_dir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mimages\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mbbox\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_batch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mheight\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mimage_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwidth\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mimage_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-25-8909e4c609ed>\u001b[0m in \u001b[0;36mload_batch\u001b[0;34m(dataset, batch_size, height, width, is_training)\u001b[0m\n\u001b[1;32m     38\u001b[0m           \u001b[0mbatch_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     39\u001b[0m           \u001b[0mnum_threads\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 40\u001b[0;31m           capacity=2 * batch_size)\n\u001b[0m\u001b[1;32m     41\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     42\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mimages\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mimages_raw\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbboxes\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/yu/anaconda3/lib/python3.5/site-packages/tensorflow/python/training/input.py\u001b[0m in \u001b[0;36mbatch\u001b[0;34m(tensors, batch_size, num_threads, capacity, enqueue_many, shapes, dynamic_pad, allow_smaller_final_batch, shared_name, name)\u001b[0m\n\u001b[1;32m    681\u001b[0m     \u001b[0;31m# TODO(josh11b,mrry): Switch to BatchQueue once it is written.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    682\u001b[0m     queue = _which_queue(dynamic_pad)(\n\u001b[0;32m--> 683\u001b[0;31m         capacity=capacity, dtypes=types, shapes=shapes, shared_name=shared_name)\n\u001b[0m\u001b[1;32m    684\u001b[0m     \u001b[0m_enqueue\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mqueue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtensor_list\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_threads\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0menqueue_many\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    685\u001b[0m     summary.scalar(\"queue/%s/fraction_of_%d_full\" % (queue.name, capacity),\n",
+      "\u001b[0;32m/Users/yu/anaconda3/lib/python3.5/site-packages/tensorflow/python/ops/data_flow_ops.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, capacity, dtypes, shapes, names, shared_name, name)\u001b[0m\n\u001b[1;32m    664\u001b[0m     \"\"\"\n\u001b[1;32m    665\u001b[0m     \u001b[0mdtypes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_as_type_list\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdtypes\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 666\u001b[0;31m     \u001b[0mshapes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_as_shape_list\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mshapes\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtypes\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    667\u001b[0m     \u001b[0mnames\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_as_name_list\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnames\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtypes\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    668\u001b[0m     queue_ref = gen_data_flow_ops._fifo_queue(\n",
+      "\u001b[0;32m/Users/yu/anaconda3/lib/python3.5/site-packages/tensorflow/python/ops/data_flow_ops.py\u001b[0m in \u001b[0;36m_as_shape_list\u001b[0;34m(shapes, dtypes, unknown_dim_allowed, unknown_rank_allowed)\u001b[0m\n\u001b[1;32m     73\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0munknown_dim_allowed\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     74\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0many\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;32mnot\u001b[0m \u001b[0mshape\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mis_fully_defined\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mshape\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mshapes\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 75\u001b[0;31m       \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"All shapes must be fully defined: %s\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mshapes\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     76\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0munknown_rank_allowed\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     77\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0many\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdims\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mshape\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mshapes\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: All shapes must be fully defined: [TensorShape([Dimension(720), Dimension(720), Dimension(3)]), TensorShape([Dimension(720), Dimension(720), Dimension(3)]), TensorShape([]), TensorShape([Dimension(1), Dimension(None), Dimension(4)])]"
+     ]
+    }
+   ],
    "source": [
     "sess = tf.InteractiveSession()\n",
     "image_size = 720\n",
     "batch_size = 8\n",
     "fish_data_dir = 'tmp/fish/dataset'    \n",
     "dataset = get_split('train', fish_data_dir)\n",
-    "data_provider = slim.dataset_data_provider.DatasetDataProvider(\n",
-    "    dataset, common_queue_capacity=batch_size*3,\n",
-    "    common_queue_min=8)"
+    "images, _, labels, [bbox] = load_batch(dataset, height=image_size, width=image_size, batch_size=batch_size)\n",
+    "\n"
    ]
   },
   {
@@ -572,10 +511,11 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
