--- a/rotate_crop_and_resize_train_imgs.ipynb
+++ b/rotate_crop_and_resize_train_imgs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -528,29 +528,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "the JSON object must be str, not 'dict'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-21-c72cc431ac08>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mjson\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloads\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlabel_json\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32mD:\\Program Files\\Anaconda\\lib\\json\\__init__.py\u001b[0m in \u001b[0;36mloads\u001b[0;34m(s, encoding, cls, object_hook, parse_float, parse_int, parse_constant, object_pairs_hook, **kw)\u001b[0m\n\u001b[1;32m    310\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ms\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    311\u001b[0m         raise TypeError('the JSON object must be str, not {!r}'.format(\n\u001b[0;32m--> 312\u001b[0;31m                             s.__class__.__name__))\n\u001b[0m\u001b[1;32m    313\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0ms\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstartswith\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mu'\\ufeff'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    314\u001b[0m         raise JSONDecodeError(\"Unexpected UTF-8 BOM (decode using utf-8-sig)\",\n",
-      "\u001b[0;31mTypeError\u001b[0m: the JSON object must be str, not 'dict'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "bbox_json = label_json[0]['annotations']\n",
+    "bbox_lst = [[bbox['y_min'], bbox['x_min'], bbox['y_max'],bbox['y_max']] for bbox in bbox_json]\n",
+    "bbox_np = np.array(bbox_lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -558,41 +559,38 @@
     {
      "data": {
       "text/plain": [
-       "{'annotations': [{'x_max': 0.0005291748046875,\n",
-       "   'x_min': 0.0003125,\n",
-       "   'y_max': 0.0004841820987654321,\n",
-       "   'y_min': 0.0003125},\n",
-       "  {'x_max': 0.00011962890625000001,\n",
-       "   'x_min': 2.3193359375e-05,\n",
-       "   'y_max': 0.0003761574074074074,\n",
-       "   'y_min': 0.00024305555555555555},\n",
-       "  {'x_max': 0.00010131835937499998,\n",
-       "   'x_min': 1.15966796875e-05,\n",
-       "   'y_max': 0.0006481481481481481,\n",
-       "   'y_min': 0.0002527006172839506},\n",
-       "  {'x_max': 9.33837890625e-05,\n",
-       "   'x_min': 4.638671875e-05,\n",
-       "   'y_max': 0.0007426697530864198,\n",
-       "   'y_min': 0.0002932098765432099},\n",
-       "  {'x_max': 0.0001885986328125,\n",
-       "   'x_min': 8.300781249999999e-05,\n",
-       "   'y_max': 0.0010262345679012347,\n",
-       "   'y_min': 0.0005767746913580247},\n",
-       "  {'x_max': 0.00045593261718750004,\n",
-       "   'x_min': 0.00023010253906250003,\n",
-       "   'y_max': 0.001084104938271605,\n",
-       "   'y_min': 0.0005999228395061728}],\n",
-       " 'class': 'image',\n",
-       " 'filename': 'img_07825.jpg'}"
+       "[0.0003125, 0.0003125, 0.0004841820987654321, 0.0004841820987654321]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "label_json[0]"
+    "bbox_lst[:][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(0.0)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array(0, dtype=np.float64)"
    ]
   },
   {
@@ -608,9 +606,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
