--- a/rotate_crop_and_resize_train_imgs.ipynb
+++ b/rotate_crop_and_resize_train_imgs.ipynb
@@ -468,12 +468,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "# generate label json\n",
     "import json\n",
     "for ind in range(len(label_files)): \n",
     "    label_file = label_files[ind]\n",
@@ -528,11 +529,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "33"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   },
   {
