--- a/fish_pretrained_model.ipynb
+++ b/fish_pretrained_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -171,13 +171,13 @@
     "    return os.path.join(dataset_dir, output_filename)\n",
     "\n",
     "def _get_bb():\n",
-    "    label_files = ['./label/bet_labels.json',\n",
-    "                 './label/alb_labels.json',\n",
-    "                 './label/yft_labels.json',\n",
-    "                 './label/dol_labels.json',\n",
-    "                 './label/shark_labels.json',\n",
-    "                 './label/lag_labels.json',\n",
-    "                 './label/other_labels.json']\n",
+    "    label_files = ['label/bet_labels.json',\n",
+    "                 'label/alb_labels.json',\n",
+    "                 'label/yft_labels.json',\n",
+    "                 'label/dol_labels.json',\n",
+    "                 'label/shark_labels.json',\n",
+    "                 'label/lag_labels.json',\n",
+    "                 'label/other_labels.json']\n",
     "    labels = []\n",
     "    for i in range(len(label_files)):\n",
     "        label_file = label_files[i]\n",
@@ -309,13 +309,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">> Converting image 2977/2977 shard 4\n",
+      ">> Converting image 800/800 shard 4\n",
+      "\n",
+      "Finished converting the fish dataset!\n"
+     ]
+    }
+   ],
    "source": [
-    "run('./input/')"
+    "run('input/')"
    ]
   },
   {
@@ -1318,9 +1329,9 @@
   "anaconda-cloud": {},
   "celltoolbar": "Raw Cell Format",
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python [conda root]",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
