--- a/fish_ssd.ipynb
+++ b/fish_ssd.ipynb
@@ -458,33 +458,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From /Users/yu/code/git/kaggle/preprocessing/inception_preprocessing.py:195 in preprocess_for_train.: image_summary (from tensorflow.python.ops.logging_ops) is deprecated and will be removed after 2016-11-30.\n",
-      "Instructions for updating:\n",
-      "Please switch to tf.summary.image. Note that tf.summary.histogram uses the node name instead of the tag. This means that TensorFlow will automatically de-duplicate summary names based on the scope they are created in. Also, the max_images argument was renamed to max_outputs.\n",
-      "WARNING:tensorflow:From /Users/yu/code/git/kaggle/preprocessing/inception_preprocessing.py:204 in preprocess_for_train.: image_summary (from tensorflow.python.ops.logging_ops) is deprecated and will be removed after 2016-11-30.\n",
-      "Instructions for updating:\n",
-      "Please switch to tf.summary.image. Note that tf.summary.histogram uses the node name instead of the tag. This means that TensorFlow will automatically de-duplicate summary names based on the scope they are created in. Also, the max_images argument was renamed to max_outputs.\n",
-      "WARNING:tensorflow:From /Users/yu/code/git/kaggle/preprocessing/inception_preprocessing.py:219 in preprocess_for_train.: image_summary (from tensorflow.python.ops.logging_ops) is deprecated and will be removed after 2016-11-30.\n",
-      "Instructions for updating:\n",
-      "Please switch to tf.summary.image. Note that tf.summary.histogram uses the node name instead of the tag. This means that TensorFlow will automatically de-duplicate summary names based on the scope they are created in. Also, the max_images argument was renamed to max_outputs.\n",
-      "WARNING:tensorflow:From /Users/yu/code/git/kaggle/preprocessing/inception_preprocessing.py:231 in preprocess_for_train.: image_summary (from tensorflow.python.ops.logging_ops) is deprecated and will be removed after 2016-11-30.\n",
-      "Instructions for updating:\n",
-      "Please switch to tf.summary.image. Note that tf.summary.histogram uses the node name instead of the tag. This means that TensorFlow will automatically de-duplicate summary names based on the scope they are created in. Also, the max_images argument was renamed to max_outputs.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# convnet visualize\n",
     "slim = tf.contrib.slim\n",
     "\n",
     "image_size = 720\n",
@@ -536,60 +516,98 @@
    "metadata": {
     "collapsed": false
    },
+   "outputs": [],
+   "source": [
+    "def bboxes_jaccard(bbox_ref, bboxes, name=None):\n",
+    "    \"\"\"Compute jaccard score between a reference box and a collection\n",
+    "    of bounding boxes.\n",
+    "\n",
+    "    Args:\n",
+    "      bbox_ref: (N, 4) or (4,) Tensor with reference bounding box(es).\n",
+    "      bboxes: (N, 4) Tensor, collection of bounding boxes.\n",
+    "    Return:\n",
+    "      (N,) Tensor with Jaccard scores.\n",
+    "    \"\"\"\n",
+    "    with tf.name_scope(name, 'bboxes_jaccard'):\n",
+    "        # Should be more efficient to first transpose.\n",
+    "        bboxes = tf.transpose(bboxes)\n",
+    "        bbox_ref = tf.transpose(bbox_ref)\n",
+    "        # Intersection bbox and volume.\n",
+    "        int_ymin = tf.maximum(bboxes[0], bbox_ref[0])\n",
+    "        int_xmin = tf.maximum(bboxes[1], bbox_ref[1])\n",
+    "        int_ymax = tf.minimum(bboxes[2], bbox_ref[2])\n",
+    "        int_xmax = tf.minimum(bboxes[3], bbox_ref[3])\n",
+    "        h = tf.maximum(int_ymax - int_ymin, 0.)\n",
+    "        w = tf.maximum(int_xmax - int_xmin, 0.)\n",
+    "        # Volumes.\n",
+    "        inter_vol = h * w\n",
+    "        union_vol = -inter_vol \\\n",
+    "            + (bboxes[2] - bboxes[0]) * (bboxes[3] - bboxes[1]) \\\n",
+    "            + (bbox_ref[2] - bbox_ref[0]) * (bbox_ref[3] - bbox_ref[1])\n",
+    "        jaccard = tfe_math.safe_divide(inter_vol, union_vol, 'jaccard')\n",
+    "        return jaccard\n",
+    "    \n",
+    "def bboxes_resize(bbox_ref, bboxes, name=None):\n",
+    "    \"\"\"Resize bounding boxes based on a reference bounding box,\n",
+    "    assuming that the latter is [0, 0, 1, 1] after transform. Useful for\n",
+    "    updating a collection of boxes after cropping an image.\n",
+    "    \"\"\"\n",
+    "    with tf.name_scope(name, 'bboxes_resize'):\n",
+    "        # Translate.\n",
+    "        v = tf.stack([bbox_ref[0], bbox_ref[1], bbox_ref[0], bbox_ref[1]])\n",
+    "        bboxes = bboxes - v\n",
+    "        # Scale.\n",
+    "        s = tf.stack([bbox_ref[2] - bbox_ref[0],\n",
+    "                      bbox_ref[3] - bbox_ref[1],\n",
+    "                      bbox_ref[2] - bbox_ref[0],\n",
+    "                      bbox_ref[3] - bbox_ref[1]])\n",
+    "        bboxes = bboxes / s\n",
+    "        return bboxes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[[ 0.1086351 ,  0.36285266,  0.82729805,  0.83072102]]],\n",
-       "\n",
-       "\n",
-       "       [[[ 0.14206128,  0.44749215,  0.9150418 ,  0.91457683]]],\n",
-       "\n",
-       "\n",
-       "       [[[ 0.24791086,  0.45924765,  0.93732589,  0.95768023]]],\n",
-       "\n",
-       "\n",
-       "       [[[ 0.22361112,  0.37421876,  0.97916669,  0.77031249]]],\n",
-       "\n",
-       "\n",
-       "       [[[ 0.00972222,  0.39140624,  0.85833335,  0.75156248]]],\n",
-       "\n",
-       "\n",
-       "       [[[ 0.29305556,  0.01171875,  0.79027778,  0.29218751]]],\n",
-       "\n",
-       "\n",
-       "       [[[ 0.22133334,  0.45078126,  0.92933333,  0.76406252]]],\n",
-       "\n",
-       "\n",
-       "       [[[ 0.02916667,  0.08046875,  0.90416664,  0.58359373]]]], dtype=float32)"
+       "(8, 1, 1, 4)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np_distorted_bbox"
+    "np_distorted_bbox.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(8, 2, 4)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np_bboxes.shape"
+   ]
   },
   {
    "cell_type": "code",
